# watchList/models/createWatchlistModels.go
@@ -1,18 +1,12 @@
 package model
 
-import "time"
-
 
 type CreateWatchlistRequest struct {
-	UserID        int64  `json:"userId" validate:"required"`
-	WatchlistName string `json:"watchlistName" validate:"required"`
+	UserID        int64  `json:"userId" validate:"required" example:"101"`
+	WatchlistName string `json:"watchlistName" validate:"required" example:"Tech Stocks"`
 }
 
-
-type CreateWatchlistResponse struct {
-	ID            int64     `json:"id"`
-	UserID        int64     `json:"userId"`
-	WatchlistName string    `json:"watchlistName"`
-	LastUpdatedAt time.Time `json:"lastUpdatedAt"`
-	ScripCount    *int64    `json:"scripCount,omitempty"`
+type CreateWatchlistSuccessResponse struct {
+	Message string `json:"message"`
+	ID      int64  `json:"id"`
 }
